--- a/PublicLibraryProject/PublicLibraryProject.vcxproj.filters
+++ b/PublicLibraryProject/PublicLibraryProject.vcxproj.filters
@@ -24,9 +24,18 @@
     <ClCompile Include="Card.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="Book.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Card.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Book.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
